Fixed title overflow on small screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,9 @@
 /* Home page title */
+h1
+{
+	margin-right: 3rem;
+}
+
 h1 a
 {
 	text-decoration: none;
